2007-12-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Performance enhancements
	* Bugfix for the bodystructure parser and per-MIME-part fetching

2007-12-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Updates from Camel upstream, rfc 2047 decoder

2007-12-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Committed Jeffrey Stedfast's patch for Camel upstream to
	camel-mime-utils.c and camel-charset-map.c
	More information here:
	http://mail.gnome.org/archives/evolution-hackers/2007-December/msg00079.html

2007-12-24  Philip Van Hoof <pvanhoof@gnome.org>

	* Merging with Camel upstream
	* When offline, folders in namespace that had a parent that was not
	subscribed, were not accessible. This was because the parents where
	not created, as LSUB didn't list those. This patch creates the
	parents.

2007-12-23  Philip Van Hoof <pvanhoof@gnome.org>

	* Removed libtinymail-queues and libtinymail-asyncworker since those
	two libs are not going to be supported in Tinymail 1.0
	* Improvements to the NAMESPACE, LIST and LSUB things
	* Reverted decoder patch, it contains buffer overflows

2007-12-22  Philip Van Hoof <pvanhoof@gnome.org>

	* Experimental support for NAMESPACE
	* Major improvements for LIST and LSUB

2007-12-21 Felipe Erias Morandeira <femorandeira@igalia.com>

        * libtinymail/tny-mime-part.[hc] : changed the signature of
                tny_mime_part_write_to_stream and tny_mime_part_decode_to_stream to
                return the number of bytes written and use a GError to notify problems.
        * libtinymail-camel/tny-camel-mime-part.[hc] : adapted the functions that
                implemented the previous two functions to comply with their new
                signatures.
        * libtinymail-camel/tny-camel-bs-mime-part.[hc] : adapted the functions
                that implemented the previous two functions to comply with their
                new signatures.
        * libtinymail-camel/camel-lite/camel/providers/local/camel-maildir-store.c: